# Prep-Function-App

./: .coveragerc  .funcignore  .gitignore  README.md  function_app.py  pyproject.toml  pytest.ini  taplo.toml
.github/workflows/: master_prep-function-app(staging).yml
dependencies/: upedata-0.1.8-py3-none-any.whl  upedata-0.2.0-py3-none-any.whl  upedata-0.3.1-py3-none-any.whl  upedata-0.4.0-py3-none-any.whl  upedata-0.4.1-py3-none-any.whl  upedata-0.4.2-py3-none-any.whl  upedata-0.4.2.1-py3-none-any.whl  upedata-0.4.3.1-py3-none-any.whl  upedata-0.4.3.2-py3-none-any.whl  upedata-0.4.4-py3-none-any.whl  upedata-0.4.4.1-py3-none-any.whl  upedata-0.4.4.2-py3-none-any.whl  upedata-0.5.0-py3-none-any.whl  upedata-0.5.1-py3-none-any.whl  upedata-0.5.2-py3-none-any.whl  upedata-0.5.3-py3-none-any.whl  upedata-0.6.4-py3-none-any.whl
prep/: function_app.py  handy_dandy_variables.py  nightly.py
prep/cme/: sol3_redis_ingestion.py
prep/data_ingestion/: sftp_file_ingestion.py  sol3_redis_ingestion.py
prep/helpers/: date_name_utilities.py  lme_date_calc_funcs.py  lme_date_calculation_functions.py  lme_staticdata_utils.py  rjo_sftp_utils.py  time_series_interpolation.py
prep/helpers/data_files/: lme_option_base_data.json  rjo_known_hosts
prep/lme/: contract_db_gen.py  contract_param_gen.py  date_calc_funcs.py
tests/cme/: test_sol3_redis_ingestion.py
tests/data_ingestion/: test_sol3_redis_ingestion.py
tests/helpers/: conftest.py  test_lme_date_calculation_functions.py  test_lme_staticdata_utils.py  test_time_series_interpolation.py
tests/lme/: conftest.py  test_lme_date_calculation_functions.py
tests/lme_overnight_samples/: 20230509_170304_INR.csv  20230524_170232_INR.csv  20230915_FCP_r.csv  20230918_FCP_r.csv  20230919_FCP_r.csv
tests/rjo_sftp_simulator/LMEPrices/: 20230504_INR_r.csv  20230510_INR_r.csv  20230511_INR_r.csv  20230512_INR_r.csv  20230515_INR_r.csv  20230516_INR_r.csv  20230517_INR_r.csv  20230518_EXR_r.csv  20230518_INR_r.csv  20230519_EXR_r.csv  20230519_INR_r.csv  20230522_EXR_r.csv  20230522_INR_r.csv  20230523_EXR_r.csv  20230523_INR_r.csv  20230524_EXR_r.csv  20230913_FCP_r.csv  20230914_FCP_r.csv  20230915_CLO_r.csv  20230918_CLO_r.csv  20230919_CLO_r.csv  20230920_CLO_r.csv  20230921_CLO_r.csv  20230921_FCP_r.csv  20230922_CLO_r.csv  20230922_FCP_r.csv  20230925_CLO_r.csv  20230925_FCP_r.csv  20230926_CLO_r.csv  20230926_FCP_r.csv  20230927_CLO_r.csv  (+2 more)
