[tool.poetry]
name = "prep"
version = "0.1.0"
description = ""
authors = ["fwf-upetrading <frederick.fillingham@upetrading.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.19"
psycopg = {extras = ["binary"], version = "^3.1.9"}
sqlalchemy-json = "^0.6.0"
redis = {extras = ["hiredis"], version = "^4.6.0"}
orjson = "^3.9.2"
azure-functions = "^1.15.0"
python-dateutil = "^2.8.2"
upedata = {path = "dependencies/upedata-0.1.8-py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
